--- a/frontend/src/components/contact/contact.css
+++ b/frontend/src/components/contact/contact.css
@@ -14,3 +14,102 @@
 .contact-title {
   font-weight: 700;
 }
+
+.contact-content {
+  width: 80%;
+  background-color: var(--color-light-white);
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+  padding: 30px 60px 40px 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.contact-content .left-side {
+  width: 25%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin-top: 15px;
+}
+
+.left-side::before {
+  content: "";
+  position: absolute;
+  height: 70%;
+  width: 2px;
+  right: -15px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: var(--color-red);
+}
+
+.left-side .contact-details {
+  margin: 14px;
+  text-align: center;
+}
+
+.left-side .contact-details i {
+  font-size: 1.5rem;
+  padding: 10px;
+  background-color: var(--color-red);
+  color: var(--color-white);
+  border-radius: 15rem;
+  width: 3rem;
+  margin-bottom: 10px;
+}
+
+.left-side .contact-details .detail-topic {
+  font-size: 1.1rem;
+  font-weight: 700;
+}
+
+.left-side .contact-details .detail-info {
+  font-size: 1rem;
+}
+
+.contact-content .right-side {
+  width: 75%;
+  margin-left: 75px;
+}
+
+.right-side #map {
+  border: 1px solid black;
+  width: 100%;
+  height: 500px;
+  align-self: center;
+}
+
+@media (max-width: 950px) {
+  .contact-content {
+    width: 90%;
+    padding: 30px 35px 40px 35px;
+  }
+
+  .contact-content .right-side {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 820px) {
+  .contact-content {
+    margin: 40px 0;
+    height: 100%;
+    flex-direction: column-reverse;
+  }
+
+  .contact-content .left-side {
+    width: 100%;
+
+    margin-top: 40px;
+    justify-content: center;
+  }
+
+  .contact-content .left-side::before {
+    display: none;
+  }
+}
