--- a/frontend/src/components/gallery/gallery.css
+++ b/frontend/src/components/gallery/gallery.css
@@ -11,6 +11,7 @@
 
 .gallery-title h1 {
   font-weight: 700;
+  padding-top: 15rem;
 }
 
 .gallery-section {
@@ -61,5 +62,11 @@
     width: 100%;
     top: 0;
     left: 0;
+  }
+}
+
+@media (max-width: 950px) {
+  .gallery-title h1 {
+    padding-top: 1em;
   }
 }
