--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -2,12 +2,23 @@
   width: 100%;
   top: 0;
   right: 0;
-  z-index: 1000;
+  z-index: 5;
   display: flex;
   align-items: center;
   justify-content: space-between;
   background: transparent;
   padding: 28px 10%;
+  transition: all 0.5s ease;
+  position: relative;
+  backdrop-filter: blur(10px);
+  background-color: var(--color-white);
+}
+
+.navbar.fixed {
+  position: fixed;
+  background: rgba(255, 255, 255, 0.6);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  padding: 20px 10%;
   transition: all 0.5s ease;
 }
 
@@ -108,6 +119,13 @@
 }
 
 @media (max-width: 1090px) {
+  .navbar {
+    position: relative;
+  }
+  .navbar.fixed {
+    position: absolute;
+  }
+
   #menu-icon {
     display: block;
   }
